--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-$bp-mobile: 425px;
+$bp-mobile: 768px;
 
 *{
   margin: 0;
@@ -12,14 +12,11 @@ $bp-mobile: 425px;
 
 .none{
   display: none;
-  @media screen and (min-width: $bp-mobile){
-      display: null;
-  }
 }
 
 body{
   text-align: center;
-  background-color: #fff;
+  background-color: #d2d4da;
   a#hamburger {
     width: 40px;
     height: 40px;
@@ -55,7 +52,14 @@ body{
     color: inherit;
     text-decoration: none;
   }
-
+  #remover{
+    display: inline-block;
+    border-radius: 5px;
+    background-color: #ff5e5d;
+    color: #fff;
+    padding: 3px 10px;
+    margin-bottom: 20px;
+  }
   #cards-holder{
     margin: 20px;
     display: flex;
@@ -63,25 +67,29 @@ body{
     flex-wrap: wrap;
     .card{
       width: 300px;
-      padding: 10px;
-      margin: 20px 0;
-      background-color: #1a5cff;
+      margin: 20px 5px;
+      background-color: #f1f5f9;
       border-radius: 5px;
       text-align: left;
-      h3,p{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      h3,p,a{
         text-transform: capitalize;
-        margin: 10px 0;
+        padding: 10px;
       }
-      p{
+      h3{
+        width: 100%;
+        background-color: #3d72de;
         color: #fff;
       }
       a{
         width: max-content;
-        margin: auto;
+        margin: 10px  auto;
         display: block;
-        padding: 3px 10px;
         border-radius: 5px;
-        background-color: lawngreen;
+        background-color: #ff5e5d;
+        color: #fff;
         cursor: pointer;
       }
     }
